--- a/.gitignore
+++ b/.gitignore
@@ -5,15 +5,15 @@
 *.suo
 *.user
 *.sln.docstates
+.vs/
+.idea/
 
 # Build results
-
 [Dd]ebug/
 [Rr]elease/
 x64/
 [Bb]in/
 [Oo]bj/
-.vs/
 
 # MSTest test Results
 [Tt]est[Rr]esult*/
