--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,7 +4,13 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- master
+  branches:
+    exclude:
+      - master
+pr:
+  branches:
+    include:
+    - master
 
 pool:
   vmImage: 'windows-latest'
